--- a/notebooks/02_05b.ipynb
+++ b/notebooks/02_05b.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "from pandas import Series, DataFrame"
+    "from pandas import Series, DataFrame\n"
    ]
   },
   {
